# sep

./: .gitignore  AGENTS.md  README.md  index.html  justfile  package-lock.json  package.json  交代.md
.sep/: config.sqlite3-journal
scripts/: generate-icons.ps1
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  provider_store.rs
src/components/: MarkdownContent.tsx
src/data/: mock.ts
