[package]
name = "sep-agent-workspace"
version = "0.1.0"
description = "Desktop-first agent workspace"
authors = ["OpenAI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.5", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
