[package]
name = "sep-agent-workspace"
version = "0.1.0"
description = "Desktop-first agent workspace"
authors = ["OpenAI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
async-stream = "0.3"
axum = { version = "0.7", features = ["json"] }
futures-util = "0.3"
genai = { path = "vendor/genai" }
html2text = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rfd = "0.15"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-dialog = "2.2.0"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
walkdir = "2"

[features]
default = []
